--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/bootstrap-slider.min.css">
   <!-- MAIN STYLE SHEET -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css">
-
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/custom.css">
   <!-- Side Switcher Css-->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/switcher.css">
 
