--- a/public/index.html
+++ b/public/index.html
@@ -107,17 +107,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script src="%PUBLIC_URL%/assets/js/bootstrap-slider.min.js"></script>
   <script src="%PUBLIC_URL%/assets/js/jquery.bootstrap-touchspin.js"></script>
  
-  <!-- REVEAL ADD-ON FILES -->
-
-  <script type='text/javascript'
-    src='%PUBLIC_URL%/assets/plugins/revolution/revolution-addons/reveal/js/revolution.addon.revealer.min.js'></script>
-
-  <!-- TYPEWRITER ADD-ON FILES -->
-
-  <script type='text/javascript'
-    src='%PUBLIC_URL%/assets/plugins/revolution/revolution-addons/typewriter/js/revolution.addon.typewriter.min.js'></script>  
-  
-   
   <!-- REVOLUTION JS FILES -->
 
   <script src="%PUBLIC_URL%/assets/plugins/revolution/revolution/js/jquery.themepunch.tools.min.js"></script>
@@ -126,13 +115,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- SLIDER REVOLUTION 5.0 EXTENSIONS  (Load Extensions only on Local File Systems !  The following part can be removed on Server for On Demand Loading) -->
   <script src="%PUBLIC_URL%/assets/plugins/revolution/revolution/js/extensions/revolution-plugin.js"></script>
 
+  <script>
+    (function(){
+      var sliderEl = document.getElementById('rev_slider_26_1');
+      if(!sliderEl) return;
+      function load(src, next){
+        var s=document.createElement('script');
+        s.src=src; s.onload=function(){ if(next) next(); };
+        document.body.appendChild(s);
+      }
+      load('%PUBLIC_URL%/assets/plugins/revolution/revolution-addons/reveal/js/revolution.addon.revealer.min.js', function(){
+        load('%PUBLIC_URL%/assets/plugins/revolution/revolution-addons/typewriter/js/revolution.addon.typewriter.min.js', function(){
+          load('%PUBLIC_URL%/assets/plugins/revolution-addons/beforeafter/js/revolution.addon.beforeafter.min.js', function(){
+            load('%PUBLIC_URL%/assets/js/rev-script-1.js');
+          });
+        });
+      });
+    })();
+  </script>
+
   
 
   <!-- REVOLUTION SLIDER SCRIPT FILES -->
-  <script src="%PUBLIC_URL%/assets/js/rev-script-1.js"></script>
-
-  <script type='text/javascript'
-    src='%PUBLIC_URL%/assets/plugins/revolution-addons/beforeafter/js/revolution.addon.beforeafter.min.js'></script>
 </body>
 
 </html>
